Chore: clustering error codes (#510)
* refactor: ErrorCode clustering setup

* test: fix tests based on new error constants defined