@@ -24,6 +24,7 @@ import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
+import org.apache.commons.lang3.StringUtils;
 import org.eclipse.microprofile.config.inject.ConfigProperty;
 import org.opensaml.saml.common.SAMLVersion;
 import org.opensaml.saml.common.xml.SAMLConstants;
@@ -96,24 +97,24 @@ public class SAMLServiceImpl implements SAMLService {
     this.clock = clock;
   }
 
-  private static void validateInResponseTo(String inResponseTo) throws OneIdentityException {
+  private static void validateInResponseTo(String inResponseTo) {
     if (inResponseTo == null || inResponseTo.isBlank()) {
-      Log.error("InResponseTo cannot be null or empty");
-      throw new OneIdentityException("InResponseTo not set.");
+      Log.error(ErrorCode.IDP_ERROR_IN_RESPONSE_TO_MISSING.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_IN_RESPONSE_TO_MISSING);
     }
   }
 
-  private static void validateSAMLVersion(SAMLVersion samlVersion) throws OneIdentityException {
+  private static void validateSAMLVersion(SAMLVersion samlVersion) {
     if (samlVersion == null || !samlVersion.equals(SAMLVersion.VERSION_20)) {
-      Log.error("Version must be 2.0");
-      throw new OneIdentityException("Version different from 2.0.");
+      Log.error(ErrorCode.IDP_ERROR_INVALID_SAML_VERSION.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_INVALID_SAML_VERSION);
     }
   }
 
-  private static void validateSAMLResponseId(String id) throws OneIdentityException {
+  private static void validateSAMLResponseId(String id) {
     if (id == null || id.isBlank()) {
-      Log.error("Response ID cannot be null or empty");
-      throw new OneIdentityException("Response ID not set.");
+      Log.error(ErrorCode.IDP_ERROR_NOT_VALID_RESPONSE_ID.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_NOT_VALID_RESPONSE_ID);
     }
   }
 
@@ -122,22 +123,25 @@ public class SAMLServiceImpl implements SAMLService {
         .getSubjectConfirmations();
     if (subjectConfirmations
         .isEmpty()) {
-      Log.error("SubjectConfirmation not correctly initialized");
-      throw new SAMLValidationException("SubjectConfirmation not correctly initialized");
+      Log.error(ErrorCode.IDP_ERROR_SUBJECT_CONFIRMATION_NOT_INITIALIZED.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_SUBJECT_CONFIRMATION_NOT_INITIALIZED);
     }
     SubjectConfirmation subjectConfirmation = subjectConfirmations.getFirst();
     if (subjectConfirmation.getMethod() == null
         || !subjectConfirmation.getMethod()
         .equals("urn:oasis:names:tc:SAML:2.0:cm:bearer")) {
-      Log.error("Invalid method attribute for SubjectConfirmation");
-      throw new SAMLValidationException("Invalid method attribute for SubjectConfirmation");
+      Log.error(
+          ErrorCode.IDP_ERROR_SUBJECT_CONFIRMATION_INVALID_METHOD_ATTRIBUTE.getErrorMessage());
+      throw new SAMLValidationException(
+          ErrorCode.IDP_ERROR_SUBJECT_CONFIRMATION_INVALID_METHOD_ATTRIBUTE);
     }
     SubjectConfirmationData subjectConfirmationData = subjectConfirmation
         .getSubjectConfirmationData();
 
     if (subjectConfirmationData == null) {
-      Log.error("SubjectConfirmationData not found");
-      throw new SAMLValidationException("SubjectConfirmationData not found");
+      Log.error(ErrorCode.IDP_ERROR_SUBJECT_CONFIRMATION_DATA_NOT_FOUND.getErrorMessage());
+      throw new SAMLValidationException(
+          ErrorCode.IDP_ERROR_SUBJECT_CONFIRMATION_DATA_NOT_FOUND);
     }
     return subjectConfirmationData;
   }
@@ -145,62 +149,65 @@ public class SAMLServiceImpl implements SAMLService {
   private static void validateAuthStatement(List<AuthnStatement> authnStatements,
       AuthLevel authLevelRequest) {
     if (authnStatements == null || authnStatements.isEmpty()) {
-      Log.error("AuthnStatements element is missing or empty");
-      throw new SAMLValidationException("AuthnStatements element is missing or empty");
+      Log.error(ErrorCode.IDP_ERROR_AUTHN_STATEMENTS_MISSING_OR_EMPTY.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_AUTHN_STATEMENTS_MISSING_OR_EMPTY);
     }
 
     AuthnContext authnContext = authnStatements.getFirst().getAuthnContext();
     if (authnContext == null) {
-      Log.error("AuthnContext element is missing");
-      throw new SAMLValidationException("AuthnContext element is missing");
+      Log.error(ErrorCode.IDP_ERROR_AUTHN_CONTEXT_MISSING);
+      throw new SAMLValidationException(
+          ErrorCode.IDP_ERROR_AUTHN_CONTEXT_MISSING);
     }
     AuthnContextClassRef authnContextClassRef = authnContext.getAuthnContextClassRef();
 
     if (authnContextClassRef == null) {
-      Log.error("AuthnContextClassRef element is missing");
-      throw new SAMLValidationException("AuthnContextClassRef element is missing");
+      Log.error(ErrorCode.IDP_ERROR_AUTHN_CONTEXT_CLASS_REF_MISSING.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_AUTHN_CONTEXT_CLASS_REF_MISSING);
     }
     Element element = authnContextClassRef.getDOM();
     if (element == null || element.getTextContent() == null || element.getTextContent().isBlank()) {
-      Log.error("AuthnContextClassRef element is missing or empty");
-      throw new SAMLValidationException("AuthnContextClassRef element is missing or empty");
+      Log.error(ErrorCode.IDP_ERROR_AUTHN_CONTEXT_CLASS_REF_EMPTY.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_AUTHN_CONTEXT_CLASS_REF_EMPTY);
     }
     AuthLevel authLevelResponse = AuthLevel.authLevelFromValue(element.getTextContent().strip());
     if (authLevelResponse
         == null) {
       Log.error(
-          "Invalid AuthnContextClassRef value: " + element.getTextContent().strip());
-      throw new SAMLValidationException("Invalid AuthnContextClassRef value");
+          ErrorCode.IDP_ERROR_INVALID_AUTHN_CONTEXT_CLASS_REF.getErrorMessage()
+              + element.getTextContent().strip());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_INVALID_AUTHN_CONTEXT_CLASS_REF);
     }
     if (authLevelResponse.compareTo(authLevelRequest) < 0) {
-      Log.error("AuthnContextClassRef value does not match the requested AuthLevel");
+      Log.error(
+          ErrorCode.IDP_ERROR_AUTHN_CONTEXT_CLASS_REF_NOT_MATCHING_REQUESTED_AUTH_LEVEL.getErrorMessage());
       throw new SAMLValidationException(
-          "AuthnContextClassRef value does not match the requested AuthLevel");
+          ErrorCode.IDP_ERROR_AUTHN_CONTEXT_CLASS_REF_NOT_MATCHING_REQUESTED_AUTH_LEVEL);
     }
   }
 
   private static void validateSubject(Subject subject) {
     if (subject == null || subject.getNameID() == null) {
-      Log.error("Subject not correctly initialized");
-      throw new SAMLValidationException("Subject not correctly initialized");
+      Log.error(ErrorCode.IDP_ERROR_SUBJECT_NOT_INITIALIZED.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_SUBJECT_NOT_INITIALIZED);
     }
     NameID nameID = subject.getNameID();
     // Validate Name ID
-    if (nameID == null || nameID.getFormat() == null) {
-      Log.error("Invalid Name ID type for Subject");
-      throw new SAMLValidationException("Invalid Name ID type for Subject");
+    if (nameID.getFormat() == null) {
+      Log.error(ErrorCode.IDP_ERROR_INVALID_NAME_ID_TYPE.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_INVALID_NAME_ID_TYPE);
     }
     // Validate NameId format
     if (nameID.getFormat().isBlank() || !nameID.getFormat()
         .equals(NameIDType.TRANSIENT)) {
-      Log.error("Invalid NameId format for Subject");
-      throw new SAMLValidationException("Invalid NameId format for Subject");
+      Log.error(ErrorCode.IDP_ERROR_INVALID_NAME_ID_FORMAT.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_INVALID_NAME_ID_FORMAT);
     }
     // Validate NameQualifier
     if (nameID.getNameQualifier() == null || nameID.getNameQualifier()
         .isBlank()) {
-      Log.error("Invalid NameQualifier for Subject");
-      throw new SAMLValidationException("Invalid NameQualifier for Subject");
+      Log.error(ErrorCode.IDP_ERROR_INVALID_NAME_QUALIFIER.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_INVALID_NAME_QUALIFIER);
     }
 
   }
@@ -208,92 +215,94 @@ public class SAMLServiceImpl implements SAMLService {
   private void validateRecipient(SubjectConfirmationData subjectConfirmationData) {
     String recipient = subjectConfirmationData.getRecipient();
     if (recipient == null) {
-      Log.error("Recipient parameter from Subject Confirmation Data not found");
-      throw new SAMLValidationException("Recipient not found");
+      Log.error(ErrorCode.IDP_ERROR_RECIPIENT_NOT_FOUND.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_RECIPIENT_NOT_FOUND);
     }
     if (!recipient.equals(BASE_PATH + ACS_URL)) {
-      Log.error("Recipient parameter does not match ACS URL: " + recipient);
-      throw new SAMLValidationException("Recipient mismatch");
+      Log.error(ErrorCode.IDP_ERROR_RECIPIENT_MISMATCH.getErrorMessage() + ":" + recipient);
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_RECIPIENT_MISMATCH);
     }
   }
 
   private void validateAudienceRestriction(List<AudienceRestriction> audienceRestrictions) {
     if (audienceRestrictions == null || audienceRestrictions.isEmpty()) {
-      Log.error("Audience Restrictions element is missing or empty");
-      throw new SAMLValidationException("Audience Restrictions element is missing or empty");
+      Log.error(ErrorCode.IDP_ERROR_AUDIENCE_RESTRICTIONS_MISSING_OR_EMPTY.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_AUDIENCE_RESTRICTIONS_MISSING_OR_EMPTY);
     }
     AudienceRestriction audienceRestriction = audienceRestrictions.getFirst();
     if (audienceRestriction == null
         || audienceRestriction.getAudiences().isEmpty()) {
-      Log.error("Audience element is missing or empty");
-      throw new SAMLValidationException("Audience element is missing or empty");
+      Log.error(ErrorCode.IDP_ERROR_AUDIENCE_RESTRICTIONS_MISSING_OR_EMPTY.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_AUDIENCE_RESTRICTIONS_MISSING_OR_EMPTY);
     }
 
     Audience audience = audienceRestriction.getAudiences().getFirst();
     Element element = audience.getDOM();
-    if (element == null || element.getTextContent() == null || !element.getTextContent().strip()
-        .equals(ENTITY_ID)) {
-      Log.error("Audience parameter not equal to service provider entity ID");
-      throw new SAMLValidationException("Audience mismatch");
+    if (element == null || element.getTextContent() == null) {
+      Log.error(ErrorCode.IDP_ERROR_AUDIENCE_MISSING_OR_EMPTY.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_AUDIENCE_MISSING_OR_EMPTY);
+    }
+    if (!element.getTextContent().strip().equals(ENTITY_ID)) {
+      Log.error(ErrorCode.IDP_ERROR_AUDIENCE_MISMATCH.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_AUDIENCE_MISMATCH);
     }
   }
 
-  private void validateDestination(String destination) throws OneIdentityException {
+  private void validateDestination(String destination) {
     if (destination == null || destination.isBlank()) {
-      Log.error("Destination cannot be null or empty");
-      throw new OneIdentityException("Destination not set.");
+      Log.error(ErrorCode.IDP_ERROR_DESTINATION_NOT_FOUND.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_DESTINATION_NOT_FOUND);
     }
     if (!destination.equals(BASE_PATH + ACS_URL)) {
-      Log.error("Destination does not match ACS URL: " + destination);
-      throw new OneIdentityException("Destination mismatch.");
+      Log.error(ErrorCode.IDP_ERROR_DESTINATION_MISMATCH.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_DESTINATION_MISMATCH);
     }
   }
 
   private void validateIssuer(Issuer issuer, String entityID) {
     // Check if element is missing
     if (issuer == null) {
-      Log.error("Issuer not found");
-      throw new SAMLValidationException("Issuer not found");
+      Log.error(ErrorCode.IDP_ERROR_ISSUER_NOT_FOUND.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_ISSUER_NOT_FOUND);
     }
     String issuerValue = issuer.getValue();
     // Check if element value is missing or blank
-    if (issuerValue == null || issuerValue.isBlank()) {
-      Log.error("Issuer value is blank");
-      throw new SAMLValidationException("Issuer value is blank");
+    if (StringUtils.isBlank(issuerValue)) {
+      Log.error(ErrorCode.IDP_ERROR_ISSUER_VALUE_BLANK.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_ISSUER_VALUE_BLANK);
     }
     // Check if element value is equal to IDP EntityID
     if (!issuerValue.equals(entityID)) {
-      Log.error("Issuer value does not match IDP EntityID: " + issuer.getValue());
-      throw new SAMLValidationException("Issuer mismatch");
+      Log.error(ErrorCode.IDP_ERROR_ISSUER_MISMATCH.getErrorMessage() + ": " + issuer.getValue());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_ISSUER_MISMATCH);
     }
     // Check if format attribute is valid
     if (!entityID.equalsIgnoreCase(CIE_ENTITY_ID) &&
         (issuer.getFormat() == null || !issuer.getFormat().equals(NameIDType.ENTITY))) {
-      Log.error("Invalid format attribute for Issuer element");
-      throw new SAMLValidationException("Invalid format attribute for Issuer element");
+      Log.error(ErrorCode.IDP_ERROR_ISSUER_INVALID_FORMAT.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_ISSUER_INVALID_FORMAT);
     }
   }
 
-  private void validateIssueInstant(Instant issueInstant, Instant samlRequestIssueInstant)
-      throws OneIdentityException {
+  private void validateIssueInstant(Instant issueInstant, Instant samlRequestIssueInstant) {
     if (issueInstant == null || issueInstant.toString().isBlank()) {
-      Log.error("Issue Instant cannot be null or empty");
-      throw new OneIdentityException("Issue Instant not set.");
+      Log.error(ErrorCode.IDP_ERROR_ISSUE_INSTANT_MISSING.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_ISSUE_INSTANT_MISSING);
     }
     if (!issueInstant.isAfter(samlRequestIssueInstant)) {
-      Log.error("Issue Instant must be after the request's Issue Instant");
-      throw new OneIdentityException("Issue Instant is not after the request's Issue Instant.");
+      Log.error(ErrorCode.IDP_ERROR_ISSUE_INSTANT_AFTER_REQUEST.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_ISSUE_INSTANT_AFTER_REQUEST);
     }
     if (!issueInstant.isBefore(Instant.now(clock))) {
-      Log.error("Issue Instant must be before current time");
-      throw new OneIdentityException("Issue Instant is not before current time.");
+      Log.error(ErrorCode.IDP_ERROR_ISSUE_INSTANT_IN_THE_FUTURE.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_ISSUE_INSTANT_IN_THE_FUTURE);
     }
   }
 
   private void validateConditions(Conditions conditions) {
     if (conditions == null) {
-      Log.error("Conditions element is missing");
-      throw new SAMLValidationException("Conditions element is missing");
+      Log.error(ErrorCode.IDP_ERROR_MISSING_CONDITIONS.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_MISSING_CONDITIONS);
     }
     validateNotBefore(conditions.getNotBefore());
     validateNotOnOrAfter(conditions.getNotOnOrAfter());
@@ -302,31 +311,31 @@ public class SAMLServiceImpl implements SAMLService {
 
   private void validateNotOnOrAfter(Instant notOnOrAfter) {
     if (notOnOrAfter == null) {
-      Log.error("NotOnOrAfter parameter not found");
-      throw new SAMLValidationException("NotOnOrAfter not found");
+      Log.error(ErrorCode.IDP_ERROR_NOT_ON_OR_AFTER_NOT_FOUND.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_NOT_ON_OR_AFTER_NOT_FOUND);
     }
     checkNotOnOrAfter(notOnOrAfter);
   }
 
   private void validateNotBefore(Instant notBefore) {
     if (notBefore == null) {
-      Log.error("NotBefore parameter not found");
-      throw new SAMLValidationException("NotBefore not found");
+      Log.error(ErrorCode.IDP_ERROR_NOT_BEFORE_NOT_FOUND.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_NOT_BEFORE_NOT_FOUND);
     }
     checkNotBefore(notBefore);
   }
 
   private void checkNotBefore(Instant notBefore) {
     if (Instant.now(clock).compareTo(notBefore) <= 0) {
-      Log.error("NotBefore parameter is in the future");
-      throw new SAMLValidationException("NotBefore is in the future");
+      Log.error(ErrorCode.IDP_ERROR_NOT_BEFORE_NOT_FOUND.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_NOT_BEFORE_NOT_FOUND);
     }
   }
 
   private void checkNotOnOrAfter(Instant notOnOrAfter) {
     if (Instant.now(clock).compareTo(notOnOrAfter) >= 0) {
-      Log.error("NotOnOrAfter parameter expired");
-      throw new SAMLValidationException("NotOnOrAfter expired");
+      Log.error(ErrorCode.IDP_ERROR_NOT_ON_OR_AFTER_EXPIRED.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_NOT_ON_OR_AFTER_EXPIRED);
     }
   }
 
@@ -335,47 +344,44 @@ public class SAMLServiceImpl implements SAMLService {
       AuthLevel authLevelRequest) {
 
     // Check if assertion id is valid
-    if (assertion.getID() == null || assertion.getID().isBlank()) {
-      Log.error("Assertion ID is missing");
-      throw new SAMLValidationException("Assertion ID is missing");
+    if (StringUtils.isBlank(assertion.getID())) {
+      Log.error(ErrorCode.IDP_ERROR_ASSERTION_ID_MISSING.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_ASSERTION_ID_MISSING);
     }
-    try {
-      validateSAMLVersion(assertion.getVersion());
-      validateIssueInstant(assertion.getIssueInstant(), samlRequestIssueInstant);
-      validateSubject(assertion.getSubject());
+    validateSAMLVersion(assertion.getVersion());
+    validateIssueInstant(assertion.getIssueInstant(), samlRequestIssueInstant);
+    validateSubject(assertion.getSubject());
 
-      SubjectConfirmationData subjectConfirmationData = extractSubjectConfirmationData(assertion);
-      validateRecipient(subjectConfirmationData);
-      validateInResponseTo(subjectConfirmationData.getInResponseTo());
-      validateNotOnOrAfter(subjectConfirmationData.getNotOnOrAfter());
-      validateIssuer(assertion.getIssuer(), entityID);
-      validateConditions(assertion.getConditions());
-      validateAuthStatement(assertion.getAuthnStatements(), authLevelRequest);
-      validateAttributeStatements(assertion, requestedAttributes, entityID);
+    SubjectConfirmationData subjectConfirmationData = extractSubjectConfirmationData(assertion);
+    validateRecipient(subjectConfirmationData);
+    validateInResponseTo(subjectConfirmationData.getInResponseTo());
+    validateNotOnOrAfter(subjectConfirmationData.getNotOnOrAfter());
+    validateIssuer(assertion.getIssuer(), entityID);
+    validateConditions(assertion.getConditions());
+    validateAuthStatement(assertion.getAuthnStatements(), authLevelRequest);
+    validateAttributeStatements(assertion, requestedAttributes, entityID);
 
-    } catch (OneIdentityException e) {
-      throw new SAMLValidationException(e);
-    }
   }
 
   private void validateAttributeStatements(Assertion assertion, Set<String> requestedAttributes,
       String entityID) {
     List<AttributeStatement> attributeStatements = assertion.getAttributeStatements();
     if (attributeStatements == null || attributeStatements.isEmpty()) {
-      Log.error("AttributeStatements element is missing or empty");
-      throw new SAMLValidationException("AttributeStatements element is missing or empty");
+      Log.error(ErrorCode.IDP_ERROR_ATTRIBUTES_STATEMENTS_NOT_PRESENT.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_ATTRIBUTES_STATEMENTS_NOT_PRESENT);
     }
     AttributeStatement attributeStatement = attributeStatements.getFirst();
     if (attributeStatement.getAttributes() == null || attributeStatement.getAttributes()
         .isEmpty()) {
-      Log.error("Attributes element is missing or empty");
-      throw new SAMLValidationException("Attributes element is missing or empty");
+      Log.error(ErrorCode.IDP_ERROR_ATTRIBUTES_NOT_PRESENT.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_ATTRIBUTES_NOT_PRESENT);
     }
     // Validate if obtained attributes match requested attributes
     Optional<List<AttributeDTO>> attributes = samlUtils.getAttributeDTOListFromAssertion(assertion);
     if (attributes.isEmpty()) {
-      Log.error("Attributes not obtained from SAML assertion");
-      throw new SAMLValidationException("Attributes not obtained from SAML assertion");
+      Log.error(ErrorCode.IDP_ERROR_ATTRIBUTES_NOT_OBTAINED_FROM_SAML_ASSERTION.getErrorMessage());
+      throw new SAMLValidationException(
+          ErrorCode.IDP_ERROR_ATTRIBUTES_NOT_OBTAINED_FROM_SAML_ASSERTION);
     }
 
     Set<String> obtainedAttributes = attributes.get().stream().map(AttributeDTO::getAttributeName)
@@ -386,9 +392,9 @@ public class SAMLServiceImpl implements SAMLService {
     if (!entityID.equalsIgnoreCase(CIE_ENTITY_ID
     )) {
       if (!requestedAttributes.equals(obtainedAttributes)) {
-        Log.error("Obtained attributes do not match requested attributes: "
-            + obtainedAttributes + " vs. " + requestedAttributes);
-        throw new SAMLValidationException("Obtained attributes do not match requested attributes");
+        Log.error(ErrorCode.IDP_ERROR_ATTRIBUTES_NOT_MATCHING.getErrorMessage() + ": " +
+            obtainedAttributes + " vs. " + requestedAttributes);
+        throw new SAMLValidationException(ErrorCode.IDP_ERROR_ATTRIBUTES_NOT_MATCHING);
       }
     }
     // CIE
@@ -399,19 +405,21 @@ public class SAMLServiceImpl implements SAMLService {
 
       if (!obtainedAttributes.containsAll(validAttributes)) {
         Log.error(
-            "Obtained attributes do not match requested attributes for CIE: " + obtainedAttributes
+            ErrorCode.IDP_ERROR_ATTRIBUTES_NOT_MATCHING_FOR_CIE.getErrorMessage() + ": "
+                + obtainedAttributes
                 + " vs. " + validAttributes);
         throw new SAMLValidationException(
-            "Obtained attributes do not match requested attributes for CIE");
+            ErrorCode.IDP_ERROR_ATTRIBUTES_NOT_MATCHING_FOR_CIE);
       }
 
       obtainedAttributes.removeAll(validAttributes);
       if (!eidasMinimumDataSet.containsAll(obtainedAttributes)) {
         Log.error(
-            "Obtained attributes do not match requested attributes for CIE: " + obtainedAttributes
+            ErrorCode.IDP_ERROR_ATTRIBUTES_NOT_MATCHING_FOR_CIE.getErrorMessage() + ": "
+                + obtainedAttributes
                 + " vs. " + eidasMinimumDataSet);
         throw new SAMLValidationException(
-            "Obtained attributes do not match requested attributes for CIE");
+            ErrorCode.IDP_ERROR_ATTRIBUTES_NOT_MATCHING_FOR_CIE);
       }
     }
   }
@@ -509,44 +517,39 @@ public class SAMLServiceImpl implements SAMLService {
 
     Assertion assertion = extractAssertion(samlResponse);
 
-    try {
-      validateSAMLResponseId(samlResponse.getID());
-      validateSAMLVersion(samlResponse.getVersion());
-      validateIssueInstant(samlResponse.getIssueInstant(), samlRequestIssueInstant);
-      validateInResponseTo(samlResponse.getInResponseTo());
-      validateDestination(samlResponse.getDestination());
-      validateIssuer(samlResponse.getIssuer(), entityID);
-      validateAssertion(assertion, entityID, requestedAttributes, samlRequestIssueInstant,
-          authLevelRequest);
+    validateSAMLResponseId(samlResponse.getID());
+    validateSAMLVersion(samlResponse.getVersion());
+    validateIssueInstant(samlResponse.getIssueInstant(), samlRequestIssueInstant);
+    validateInResponseTo(samlResponse.getInResponseTo());
+    validateDestination(samlResponse.getDestination());
+    validateIssuer(samlResponse.getIssuer(), entityID);
+    validateAssertion(assertion, entityID, requestedAttributes, samlRequestIssueInstant,
+        authLevelRequest);
 
-      validateSignature(samlResponse, entityID);
+    validateSignature(samlResponse, entityID);
 
-
-    } catch (OneIdentityException e) {
-      throw new SAMLValidationException(e);
-    }
   }
 
   private Assertion extractAssertion(Response samlResponse) {
     try {
       return samlResponse.getAssertions().getFirst();
     } catch (NoSuchElementException e) {
-      Log.error("Assertion not found in SAML response");
-      throw new SAMLValidationException("Assertion not found");
+      Log.error(ErrorCode.IDP_ERROR_ASSERTION_NOT_FOUND.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.IDP_ERROR_ASSERTION_NOT_FOUND);
     }
   }
 
-  private void validateSignature(Response samlResponse, String entityID)
-      throws OneIdentityException {
+  private void validateSignature(Response samlResponse, String entityID) {
     Optional<IDP> idp = getIDPFromEntityID(entityID);
     if (idp.isEmpty()) {
-      Log.error("IDP not found for entity ID: " + entityID);
-      throw new SAMLValidationException("IDP not found");
+      Log.error(ErrorCode.OI_ERROR_IDP_NOT_FOUND.getErrorMessage() + ":" + entityID);
+      throw new SAMLValidationException(ErrorCode.OI_ERROR_IDP_NOT_FOUND);
     }
     try {
       samlUtils.validateSignature(samlResponse, idp.get());
     } catch (SAMLUtilsException e) {
-      throw new OneIdentityException(e);
+      Log.error(ErrorCode.OI_ERROR_VALIDATE_SIGNATURE_ERROR.getErrorMessage());
+      throw new SAMLValidationException(ErrorCode.OI_ERROR_VALIDATE_SIGNATURE_ERROR);
     }
   }
 
@@ -570,4 +573,3 @@ public class SAMLServiceImpl implements SAMLService {
     return idpConnectorImpl.getIDPByEntityIDAndTimestamp(entityID, TIMESTAMP_SPID);
   }
 }
-
